test/files/parser/errors/call.otest
name = "Call with comma before first input"
line = 2
character = 6
error = 'Expected input name after "(", but received ",".'

---

sine(,)

---

name = "Call closed after first input"
line = 2
character = 12
error = 'Expected ":" after input name, but received ")".'

---

sine(volume)

---

name = "Call closed after second input"
line = 2
character = 26
error = 'Expected ":" after input name, but received ")".'

---

sine(volume: 1, frequency)

---

name = "Call closed after first comma"
line = 2
character = 17
error = 'Expected input name after ",", but received ")".'

---

sine(volume: 1, )

---

name = "Call closed after second comma"
line = 2
character = 33
error = 'Expected input name after ",", but received ")".'

---

sine(volume: 1, frequency: 440, )

---

name = "First call input specified twice"
line = 2
character = 17
error = 'Input "volume" specified more than once for function "sine".'

---

sine(volume: 1, volume: 1)

---

name = "Second call input specified twice"
line = 2
character = 33
error = 'Input "frequency" specified more than once for function "sine".'

---

sine(volume: 1, frequency: 440, frequency: 440)
